# esp32-motor-web-rust

./: Cargo.toml  README.md  diagram.json  espflash.toml  wokwi.toml
.cargo/: config.toml
src/: index.html  led.rs  main.rs  motor.rs  net.rs  server.rs
